--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                               <li><a class="dropdown-item" href="#camisas">Camisas</a></li>
                             </ul>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#bolas">Bolas</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#acessorios">Acessorios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#acessorios">Benny the bull</a></li>
                         </li>
                     </ul>
                     <form class="d-flex">
@@ -231,9 +231,9 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Regata Chicago Bulls 2024 Nike Statement Jordan Swingman </h5>
+                                    <h5 class="fw-bolder">Jaqueta Mitchell & Ness Authentic Warm Up Chicago Bulls Branca</h5>
                                     <!-- Product price-->
-                                   R$100.00
+                                   R$150.00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -250,8 +250,9 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Regata Chicago Bulls 2024 Icon Edition Swingman</h5>
-                                    $100,00
+                                    <h5 class="fw-bolder">
+                                        Jaqueta Mitchell & Ness City Collection Lightweight Satin Chicago Bulls Branca</h5>
+                                    $120,00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -268,9 +269,9 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Regata Chicago Bulls 2024 Nike Association Swingman</h5>
+                                    <h5 class="fw-bolder">Jaqueta Mitchell & Ness Team OG 2.0 Lightweight Satin Jacket Vintage Logo Chicago Bulls Dourada</h5>
                                     <!-- Product price-->
-                                    R$100,00
+                                    R$120,00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -287,9 +288,9 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Camisa Retro Authentic Mitchell & Ness Michael Jordan 1984-85 Jersey</h5>
+                                    <h5 class="fw-bolder">Jaqueta Mitchell & Ness Arched Retro Lined Windbreaker Chicago Bulls Branca</h5>
                                     <!-- Product price-->
-                                    $125.00
+                                    $135.00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -299,7 +300,7 @@
                         </div>
                     </div>
         </section>
-        <section id="jack" class="py-5">
+        <section id="camisas" class="py-5">
             <h1 class="regatas">Camisas</h1>
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -312,9 +313,9 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Regata Chicago Bulls 2024 Nike Statement Jordan Swingman </h5>
+                                    <h5 class="fw-bolder">Camisa Chicago Bulls Sportiqe Script Black Comfy</h5>
                                     <!-- Product price-->
-                                   R$100.00
+                                   R$70.00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -331,8 +332,8 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Regata Chicago Bulls 2024 Icon Edition Swingman</h5>
-                                    $100,00
+                                    <h5 class="fw-bolder">Camisa Chicago Bulls Sportiqe Basketball Black Comfy</h5>
+                                    $70,00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -349,9 +350,9 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Regata Chicago Bulls 2024 Nike Association Swingman</h5>
+                                    <h5 class="fw-bolder">Camisa Chicago Bulls Mitchell & Ness Champions</h5>
                                     <!-- Product price-->
-                                    R$100,00
+                                    R$70,00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -368,9 +369,9 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Camisa Retro Authentic Mitchell & Ness Michael Jordan 1984-85 Jersey</h5>
+                                    <h5 class="fw-bolder">Camisa Chicago Bulls Sportiqe Bingham Waycross</h5>
                                     <!-- Product price-->
-                                    $125.00
+                                    $75.00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -387,9 +388,9 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Regata Chicago Bulls 2024 Nike Association Swingman</h5>
+                                    <h5 class="fw-bolder">Camisa Chicago Bulls Michael Jordan Vintage</h5>
                                     <!-- Product price-->
-                                    R$100,00
+                                    R$55,00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -406,9 +407,9 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Camisa Retro Authentic Mitchell & Ness Michael Jordan 1984-85 Jersey</h5>
+                                    <h5 class="fw-bolder">Camisa Chicago Bulls Premium Dennis Rodman</h5>
                                     <!-- Product price-->
-                                    $125.00
+                                    $65.00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -418,7 +419,7 @@
                         </div>
                     </div>
         </section>
-        <section id="jack" class="py-5">
+        <section id="bolas" class="py-5">
             <h1 class="regatas">Bolas</h1>
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -426,14 +427,14 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="assets/jack/jack mitchel e ness whitefront2.png" alt="..." />
+                            <img class="card-img-top" src="assets/balls/ball1.jpg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Regata Chicago Bulls 2024 Nike Statement Jordan Swingman </h5>
+                                    <h5 class="fw-bolder">Bola Chicago Bulls Team Tribute Basketball</h5>
                                     <!-- Product price-->
-                                   R$100.00
+                                   R$80.00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -445,13 +446,13 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="assets/jack/jack mitchel e ness white3front.png" alt="..." />
+                            <img class="card-img-top" src="assets/balls/ball2.jpg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Regata Chicago Bulls 2024 Icon Edition Swingman</h5>
-                                    $100,00
+                                    <h5 class="fw-bolder">Bola Chicago Bulls Team Tiedye Basketball</h5>
+                                    R$80,00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -463,14 +464,14 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="assets/jack/jackmengoldfront.png" alt="..." />
+                            <img class="card-img-top" src="assets/balls/ball4.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Regata Chicago Bulls 2024 Nike Association Swingman</h5>
+                                    <h5 class="fw-bolder">Bola Chicago Bulls Team Autograph Mini</h5>
                                     <!-- Product price-->
-                                    R$100,00
+                                    R$40,00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -479,42 +480,22 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img class="card-img-top" src="assets/jack/jackmentrifront.png" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">Camisa Retro Authentic Mitchell & Ness Michael Jordan 1984-85 Jersey</h5>
-                                    <!-- Product price-->
-                                    $125.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Adicionar ao carrinho</a></div>
-                            </div>
-                        </div>
-                    </div>
-        </section>
-        <section id="jack" class="py-5">
-            <h1 class="regatas">Acessorios e outros</h1>
+        </section>s
+        <section id="acessorios" class="py-5">
+            <h1 class="regatas">Benny the bull</h1>
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-               
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="assets/jack/jack mitchel e ness whitefront2.png" alt="..." />
+                            <img class="card-img-top" src="assets/Toys/quadrobenny.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Regata Chicago Bulls 2024 Nike Statement Jordan Swingman </h5>
+                                    <h5 class="fw-bolder">Chicago Bulls Benny the Bull Framed Pro Dynamo</h5>
                                     <!-- Product price-->
-                                   R$100.00
+                                   R$60.00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -526,13 +507,13 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="assets/jack/jack mitchel e ness white3front.png" alt="..." />
+                            <img class="card-img-top" src="assets/Toys/btbcoin.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Regata Chicago Bulls 2024 Icon Edition Swingman</h5>
-                                    $100,00
+                                    <h5 class="fw-bolder">Chicago Bulls Benny the Bull Silver Color Coin</h5>
+                                    $40,00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -544,14 +525,14 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="assets/jack/jackmengoldfront.png" alt="..." />
+                            <img class="card-img-top" src="assets/Toys/btbtap.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Regata Chicago Bulls 2024 Nike Association Swingman</h5>
+                                    <h5 class="fw-bolder">Chicago Bulls Uncanny Brands Benny 60" x 80" Raschel Plush Blanket</h5>
                                     <!-- Product price-->
-                                    R$100,00
+                                    R$30,00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -563,14 +544,14 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="assets/jack/jackmentrifront.png" alt="..." />
+                            <img class="card-img-top" src="assets/Toys/bennytoy.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Camisa Retro Authentic Mitchell & Ness Michael Jordan 1984-85 Jersey</h5>
+                                    <h5 class="fw-bolder">Uncanny Brands Benny the Bull 10" Association Plush</h5>
                                     <!-- Product price-->
-                                    $125.00
+                                    $65.00
                                 </div>
                             </div>
                             <!-- Product actions-->
